[package]
name = "dusk-syntax"
description = "Crate, that defines structures and methods, used for storing and processing of syntax elements, used in dusk project"
readme = "README.md"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
version = "0.0.2"
authors = ["Andy Gozas <andy@gozas.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
term = "0.7.0"
